--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,5 +7,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repository code
+      uses: actions/checkout@v3
       - run: npm run build
       - run: npm run test
