--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,5 +9,7 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v3
-    - run: npm run build
-    - run: npm run test
+    - name: Install dependencies
+      run: npm ci
+    - name: Run tests
+      run: npm test
