--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,6 @@ jobs:
     - name: Check out repository code
       uses: actions/checkout@v3
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Run tests
       run: npm test
