Add more keywords to package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "keywords": [
     "fraction",
-    "numbers"
+    "numbers",
+    "math",
+    "rational",
+    "rational number",
+    "precise",
+    "precision"
   ],
   "author": "Blue",
   "license": "Unlicense",
