--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "precise",
     "precision"
   ],
-  "author": "Blue",
+  "author": "Blue <susl@rickroll.link> (https://susl.duckdns.org/)",
   "license": "Unlicense",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "mocha": "^10.0.0"
+  },
+  "homepage": "https://github.com/Susul-1312/yetanotherfractionlibrary",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Susul-1312/yetanotherfractionlibrary.git"
   }
 }
