Add more files to file list

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "files": [
     "index.js",
     "./dist/index.js",
-    "UNLICENSE"
+    "UNLICENSE",
+    "README.md",
+    "package.json"
   ],
   "scripts": {
     "test": "mocha",
